[project]
name = "qlinks"
version = "0.1.0rc1"
description = "Quantum link model"
authors = [
    { name = "Tan Tao-Lin", email = "tanlin2013@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dynamic = [ "dependencies" ]

[tool.poetry.dependencies]
tqdm = "^4.63.0"
numpy = "^2.1.0"
scipy = "^1.10.0"
pandas = "^3.0.0"
pyarrow = "^23.0.0"  # for parquet IO
networkx = "^3.0"
ortools = "^9.11.0"
pynauty = "^2.8.6"
sympy = "^1.9"
ray = { version = "2.55.0", optional = true}
matplotlib = { version = "^3.6.3", optional = true}
pyvis = { version = "^0.3.0", optional = true}
igraph = { version = "^1.0.0", optional = true}
pycairo = { version = "^1.25.0", optional = true}  # for igraph plotting
plotly = { version = "^6.0.0", optional = true}

[project.optional-dependencies]
distributed = ["ray"]
drawing = ["matplotlib", "pyvis", "plotly", "pycairo", "igraph"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
commitizen = "^4.0.0"
vulture = "^2.4"
bandit = "^1.7.4"
safety = "^3.0.0"
isort = "^8.0.0"
flake8-bugbear = "^25.0.0"
Flake8-pyproject = "^1.2.2"
black = { version = "^26.0.0", extras = ["d", "jupyter"] }
mypy = "^1.0.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.9.0"
hypothesis = { version = "^6.68.2", extras = ["numpy"] }
pep8-naming = "^0.15.0"
cruft = "^2.12.0"
pandas-stubs = "^3.0.0"
scipy-stubs = "^1.16.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-book-theme = "^1.0.0"
nbsphinx = "^0.9.0"
m2r2 = "^0.3.2"
pandoc = "^2.3"
docutils = "0.20.1"
lxml = { version = "^5.0.0", extras = ["html_clean"]}
#portray = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
count = true
max-line-length = 100
ignore = [
    "E203",
    "W503"
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
plugins = ["numpy.typing.mypy_plugin"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["*tests*"]

[tool.bandit]
skips = ["B101"]

[tool.cruft]
skip = []
